# server/src/routes/item.route.ts
@@ -1,13 +1,0 @@
-// import {} from '../controllers/item.controller.js';
-import * as express from 'express';
-const router = express.Router()
-
-
-// router.get('/', getAllIds);
-// router.get('/:id', getImage);
-// router.delete('/:id', deleteById);
-// router.get('/:id/comments', getItemComments);
-// router.post('/:id/comments', addComment);
-// router.post('/file/upload', addItem);
-
-export default router
